package com.company.inventory.model;
//Enum Movememnt type to show stock in and stock out movement 
public enum MovementType {
    IN,
    OUT
}
